--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "node rest/index.js"
+    "start": "node Pokemon.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/code-differently/Pokedex-App#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "pug": "^3.0.0"
   }
