--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/code-differently/Pokedex-App#readme",
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "express": "^4.15.2",
+    "nodemon": "^2.0.7"
+  },
+  "keywords": []
 }
